[package]
name = "rust-hello-world"
version = "0.1.0"
authors = ["Dan Fox <iamdanfox@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "*"
syntex = "*"

[dependencies]
serde = "*"
serde_json = "*"
log = "*"
env_logger = "*"

[dependencies.iron]
version = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser.git"
